[INJIWEB-1435] - Add fallback logic to use Credential issuer host as authorization server (#1058)
Signed-off-by: Durgesh Konga <kongadurgesh20@gmail.com>